--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "chart.js": "^2.9.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "node-appwrite": "^14.0.0",
+    "plaid": "^27.0.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-chartjs-2": "^2.10.0",
